<resources>
    <string name="app_name">至尊宝豪车共享</string>

    <string name="press_again_to_leave">再按一次退出至尊宝</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="t_d_a_t">后天</string>
    <string name="order_day">\n预订日</string>
</resources>
