<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_month_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_bg"
            android:padding="10dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_36dp"/>
        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/tv_year_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/calendar_enable_color"
            android:textSize="18sp" />
        <ImageButton
            android:id="@+id/right_month_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_bg"
            android:padding="10dp"
            android:src="@drawable/ic_chevron_right_black_36dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/sunday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/monday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/tuesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/wednesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/thursday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/friday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/saturday" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/calendar_threeday_color" />

    <zzbcar.cckj.com.nzzb.widget.NoScrollGridView
        android:id="@+id/gv_calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:scrollbars="none"
        android:stretchMode="columnWidth" />

</LinearLayout>